--- a/src/template/package.json
+++ b/src/template/package.json
@@ -28,6 +28,7 @@
     "query-string": "^6.13.1",
     "socket.io-client": "^2.3.0",
     "tailwindcss": "^1.4.6",
+    "v-contextmenu": "^2.9.0",
     "vue": "^2.6.11",
     "vue-authenticate": "^1.4.1",
     "vue-class-component": "^7.2.3",
@@ -38,6 +39,7 @@
     "vue-page-title": "^1.2.2",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.2.0",
+    "vue-runtime-helpers": "^1.1.2",
     "vue-socket.io": "^3.0.9",
     "vue-socket.io-extended": "^4.0.3",
     "vue2-filters": "^0.11.0",
