--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ Authlib==0.14.3
 Babel==2.8.0
 bcrypt==3.1.7
 blinker==1.4
+cached-property==1.5.1
 cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.0
@@ -12,6 +13,7 @@ chardet==3.0.4
 click==7.1.2
 cryptography==2.9.2
 dateparser==0.7.4
+decorator==4.4.2
 dnspython==1.16.0
 eventlet==0.25.2
 filedepot==0.7.1
@@ -25,7 +27,7 @@ Flask-Migrate==2.5.2
 flask-restplus==0.13.0
 Flask-Script==2.0.6
 Flask-SocketIO==4.3.0
-Flask-SQLAlchemy==2.4.0
+Flask-SQLAlchemy==2.4.4
 flask-swagger-ui==3.25.0
 google-api-core==1.20.1
 google-api-python-client==1.9.3
@@ -53,6 +55,7 @@ MarkupSafe==1.1.1
 monotonic==1.5
 oauthlib==3.1.0
 passlib==1.7.2
+pbr==5.4.5
 pendulum==2.1.0
 promise==2.3
 protobuf==3.12.2
@@ -80,10 +83,13 @@ singledispatch==3.4.0.3
 six==1.12.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.15
+sqlalchemy-mptt==0.2.5
+SQLAlchemy-serializer==1.3.4.2
+stevedore==3.2.0
 tzlocal==2.1
 Unidecode==1.1.1
 uritemplate==3.0.1
 urllib3==1.25.9
 uWSGI==2.0.19.1
-Werkzeug==1.0.0
+Werkzeug==0.16.1
 zipp==3.1.0
