--- a/src/template/package.json
+++ b/src/template/package.json
@@ -24,6 +24,8 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "pouchdb": "^7.2.1",
     "query-string": "^6.13.1",
     "socket.io-client": "^2.3.0",
@@ -36,7 +38,6 @@
     "vue-i18n": "^8.18.2",
     "vue-ls": "^3.2.1",
     "vue-nprogress": "^0.1.5",
-    "vue-page-title": "^1.2.2",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.2.0",
     "vue-runtime-helpers": "^1.1.2",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^8.1.3",
+    "@types/moment": "^2.13.0",
     "@types/nprogress": "^0.2.0",
     "@types/vue-ls": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
