change LayoutComponents to Layout. change default lang to en-US. added assertCDN.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,11 +3,11 @@
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
-  server_name myserver.com;
+  server_name graphue.myhost;
 
   index index.html;
 
-  root /var/www/html/graphue/src/app/view/dist;
+  root /usr/local/var/www/graphue/src/template/dist;
 
   gzip_static on;
   gzip_comp_level 5;
