--- a/src/template/package.json
+++ b/src/template/package.json
@@ -67,6 +67,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "git-revision-webpack-plugin": "^3.0.6",
     "less": "^3.11.3",
     "less-loader": "^6.2.0",
     "node-sass": "^4.14.1",
