--- a/src/template/package.json
+++ b/src/template/package.json
@@ -11,8 +11,7 @@
     "@casl/ability": "^4.1.5",
     "@casl/vue": "^1.1.1",
     "ant-design-vue": "^1.6.3",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
+    "apollo-boost": "^0.4.9",
     "apollo-link-error": "^1.1.13",
     "apollo-upload-client": "^13.0.0",
     "axios": "^0.19.2",
