--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
-*.vue linguist-vendored=false
+*.vue linguist-detectable=true
 *.css linguist-detectable=false
+*.html linguist-detectable=false
 *.js linguist-detectable=true
 *.ts linguist-detectable=true
 *.py linguist-detectable=true
