--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3.7'
 services:
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    volumes:
+      - ./redis.conf:/redis.conf
+    command: ['redis-server', '/redis.conf']
+    networks:
+      - backend-network
+
   db:
     image: 'mysql:8.0.19'
     volumes:
@@ -15,13 +25,14 @@ services:
       - MYSQL_USER=root
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db-password
   api:
+    image: 'graphue_api'
     build:
       context: ./src
+      dockerfile: Dockerfile
       target: develop-stage
-    container_name: api
     restart: always
     ports:
-      - '5000:5000'
+      - 5000:5000
     volumes:
       - './src/:/src'
     command: /bin/sh -c "FLASK_ENV=development python manage.py"
@@ -29,18 +40,20 @@ services:
       - backend-network
       - frontend-network
   ui:
+    image: 'graphue_ui'
     build:
       context: ./src/template
+      dockerfile: Dockerfile
       target: develop-stage
-    container_name: ui
     restart: always
     ports:
-      - '8080:8080'
+      - 8080:8080
     volumes:
       - './src/template:/template'
     command: /bin/sh -c "yarn serve"
     networks:
       - frontend-network
+
 volumes:
   db: null
 secrets:
