--- a/src/template/package.json
+++ b/src/template/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@casl/ability": "^4.1.5",
     "@casl/vue": "^1.1.1",
+    "@vue/cli-service": "^4.5.3",
     "ant-design-vue": "^1.6.3",
     "apollo-boost": "^0.4.9",
     "apollo-link-error": "^1.1.13",
@@ -25,6 +26,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
+    "postcss-url": "^8.0.0",
     "query-string": "^6.13.1",
     "socket.io-client": "^2.3.0",
     "tailwindcss": "^1.4.6",
@@ -57,7 +59,6 @@
     "@vue/cli-plugin-router": "^4.4.0",
     "@vue/cli-plugin-typescript": "^4.4.0",
     "@vue/cli-plugin-vuex": "^4.4.0",
-    "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-plugin-import": "^1.13.0",
@@ -69,6 +70,8 @@
     "less": "^3.11.3",
     "less-loader": "^6.2.0",
     "node-sass": "^4.14.1",
+    "postcss-import": "^12.0.1",
+    "precss": "^4.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^9.0.2",
     "typescript": "~3.9.3",
