--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.4.2
 aniso8601==7.0.0
+ansi2html==1.5.2
 attrs==19.3.0
 Authlib==0.14.3
+Automat==20.2.0
 Babel==2.8.0
 bcrypt==3.1.7
 blinker==1.4
@@ -10,13 +12,16 @@ cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
-click==7.1.2
+click==7.1.1
+constantly==15.1.0
 cryptography==2.9.2
+cssselect==1.1.0
 dateparser==0.7.4
 decorator==4.4.2
 dnspython==1.16.0
+et-xmlfile==1.0.1
 eventlet==0.25.2
-filedepot==0.7.1
+filedepot
 Flask==1.1.1
 Flask-Babel==1.0.0
 Flask-CLI==0.4.0
@@ -43,40 +48,63 @@ graphql-server-core==1.2.0
 greenlet==0.4.16
 gunicorn==20.0.4
 httplib2==0.18.1
+hyperlink==19.0.0
 idna==2.8
 importlib-metadata==1.7.0
+incremental==17.5.0
 install==1.3.3
+itemadapter==0.1.0
 itsdangerous==1.1.0
+jdcal==1.4.1
 Jinja2==2.10.1
 jsonschema==3.2.0
+lxml==4.5.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 monotonic==1.5
 oauthlib==3.1.0
+openpyxl==3.0.4
+parsel==1.6.0
 passlib==1.7.2
+pathspec==0.8.0
 pbr==5.4.5
 pendulum==2.1.0
 promise==2.3
+Protego==0.1.16
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+PyDispatcher==2.0.5
+PyHamcrest==2.0.2
 PyJWT==1.7.1
+pymongo==3.10.1
 PyMySQL==0.9.3
 pyOpenSSL==19.1.0
 pyrsistent==0.16.0
+python-crontab==2.5.1
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 python-editor==1.0.4
 python-engineio==3.13.1
+python-scrapyd-api==2.1.2
 python-socketio==4.6.0
 pytz==2019.1
 pytzdata==2019.3
+queuelib==1.5.0
 redis==3.5.3
 regex==2020.6.8
 requests==2.23.0
 rsa==4.6
 Rx==1.6.1
+scantree==0.0.1
+Scrapy==2.2.1
+scrapy-redis==0.6.8
+scrapy-splash==0.7.2
+scrapy-xlsx==0.1.1
+scrapyd==1.2.1
+scrapyd-client==1.1.0
+service-identity==18.1.0
 setproctitle==1.1.10
 singledispatch==3.4.0.3
 six==1.12.0
@@ -85,9 +113,14 @@ SQLAlchemy==1.3.15
 sqlalchemy-mptt==0.2.5
 SQLAlchemy-serializer==1.3.4.2
 stevedore==3.2.0
+Twisted==20.3.0
 tzlocal==2.1
 Unidecode==1.1.1
 uritemplate==3.0.1
 urllib3==1.25.9
+uWSGI==2.0.19.1
+w3lib==1.22.0
+websockets==8.1
 Werkzeug==0.16.1
 zipp==3.1.0
+zope.interface==5.1.0
